# sphinx-simple-theme

./: .gitignore  README.rst  pyproject.toml
docs/source/: conf.py  examples.rst  index.rst  installation.rst  options.rst  quick_start.inc
sphinx-simple-theme/: layout.html  search.html  theme.conf
sphinx-simple-theme/static/: documentation_options.js_t  mobile_navigation.js  simple.css_t
